# train_fast_api

./: .env-example  .env-non-dev  .env-non-dev-example  .flake8  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  grafana-dashboard.json  openapi.json  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  test.py
app/: database.py  exceptions.py  logger.py  main.py  test_requests.py
app/admin/: view.py
app/app_components/: admin.py  instrumentation.py  middleware.py  redis_cache.py  routes.py  sentry.py  versioning.py
app/booking/: __init__.py  booking_dao.py  booking_models.py  booking_router.py  booking_schemas.py  dao.py  models.py  router.py  schemas.py
app/dao/: __init__.py  base.py
app/hotels/: __init__.py  dao.py  hotel_dao.py  hotel_models.py  hotel_router.py  hotel_schemas.py  models.py  router.py  schemas.py
app/hotels/rooms/: __init__.py  dao.py  models.py  room_dao.py  room_models.py  room_router.py  room_schemas.py  router.py  schemas.py
app/images/: __init__.py  images_router.py  router.py
app/migrations/: env.py
app/migrations/versions/: 01c822bc950da2_initional_migration.py  02_657f807b2291_add_bookings_users_rooms.py  (+2 more)
app/pages/: __init__.py  pages_router.py  router.py
app/tasks/: __init__.py  celery.py  email_templates.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py
app/users/: __init__.py  auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py  user_dao.py  user_dependencies.py  user_models.py  user_router.py  user_schemas.py
(+8 files in other folders)
